--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@
       height: 100%;
       position: relative;
     }
+    .video-js .vjs-big-play-button {
+        top: 48% !important;
+        left: 48% !important;
+    }
     #my_video_1 {
       box-shadow: 0 0 20px 0px black;
       min-width: 100%;
